NetBSD Problem Report #18818
Received: (qmail 5997 invoked by uid 605); 26 Oct 2002 18:19:48 -0000
Message-Id: <200210261822.g9QIMHr02985@mofo.grunta.com>
Date: Sun, 27 Oct 2002 05:22:17 +1100 (EST)
From: grant beattie <grant@NetBSD.org>
Sender: gnats-bugs-owner@netbsd.org
Reply-To: grant@NetBSD.org
To: gnats-bugs@gnats.netbsd.org
Subject: cannot enter ddb with usb keyboard
X-Send-Pr-Version: 3.95
>Number: 18818
>Category: port-i386
>Synopsis: cannot enter ddb with usb keyboard
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: port-i386-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Oct 26 18:20:00 +0000 2002
>Closed-Date: Mon Jan 02 17:00:10 +0000 2012
>Last-Modified: Mon Jan 02 17:00:10 +0000 2012
>Originator: grant beattie
>Release: NetBSD 1.6J
>Organization:
>Environment:
System: NetBSD mofo 1.6J NetBSD 1.6J (MOFO) #0: Fri Oct 25 00:54:35 EST 2002 grant@mofo:/data1/netbsd/current/src/sys/arch/i386/compile/MOFO i386
Architecture: i386
Machine: i386
>Description:
It does not seem possible to break into ddb using a USB keyboard.
The ctrl-alt-esc key sequence does nothing.
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
From: Simon Hitzemann <simon.hitzemann@informatik.tu-chemnitz.de>
To: netbsd-bugs-owner@netbsd.org, grant beattie <grant@mofo.grunta.com>
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: port-i386/18818: cannot enter ddb with usb keyboard
Date: Sun, 27 Oct 2002 00:04:09 +0200
Hello grant,
Saturday, October 26, 2002, 8:22:17 PM, you wrote:
>>Number: 18818
>>Category: port-i386
>>Synopsis: cannot enter ddb with usb keyboard
>>Confidential: no
>>Severity: non-critical
>>Priority: low
>>Responsible: port-i386-maintainer
>>State: open
>>Class: sw-bug
>>Submitter-Id: net
>>Arrival-Date: Sat Oct 26 11:20:00 PDT 2002
>>Closed-Date:
>>Last-Modified:
>>Originator: grant beattie
>>Release: NetBSD 1.6J
>>Organization:
>>Environment:
> System: NetBSD mofo 1.6J NetBSD 1.6J (MOFO) #0: Fri Oct 25 00:54:35 EST 2002 grant@mofo:/data1/netbsd/current/src/sys/arch/i386/compile/MOFO i386
> Architecture: i386
> Machine: i386
>>Description:
> It does not seem possible to break into ddb using a USB keyboard.
> The ctrl-alt-esc key sequence does nothing.
>>How-To-Repeat:
>>Fix:
>>Release-Note:
>>Audit-Trail:
>>Unformatted:
I cannot enter ddb with a german USB keyboard and if the kernel
itself drops into ddb it doesn't work, too. So I suppose the USB
driver doesn't work in ddb.
Best regards,
Simon mailto:simon.hitzemann@informatik.tu-chemnitz.de
State-Changed-From-To: open->feedback
State-Changed-By: mycroft
State-Changed-When: Sun Jul 4 01:33:23 UTC 2004
State-Changed-Why:
This was fixed some time ago.
Responsible-Changed-From-To: port-i386-maintainer->mycroft
Responsible-Changed-By: mycroft
Responsible-Changed-When: Sun Jul 4 01:33:23 UTC 2004
Responsible-Changed-Why:
.
From: grant beattie <grant@NetBSD.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: mycroft@NetBSD.org, port-i386-maintainer@NetBSD.org
Subject: Re: port-i386/18818
Date: Tue, 24 Aug 2004 20:17:18 +1000
On Sun, Jul 04, 2004 at 01:37:39AM -0000, mycroft@netbsd.org wrote:
> Synopsis: cannot enter ddb with usb keyboard
>
> State-Changed-From-To: open->feedback
> State-Changed-By: mycroft
> State-Changed-When: Sun Jul 4 01:33:23 UTC 2004
> State-Changed-Why:
> This was fixed some time ago.
with this kernel:
NetBSD mofo 2.0G NetBSD 2.0G (_mofo_) #10: Tue Jul 20 23:40:18 EST 2004 grant@mofo:/data1/netbsd/current/src/sys/arch/i386/compile/_mofo_ i386
it is still not working for me. I have not tried disabling USB
keyboard support in NetBSD and using the BIOS USB support.
Responsible-Changed-From-To: mycroft->port-i386-maintainer
Responsible-Changed-By: wiz@netbsd.org
Responsible-Changed-When: Sun, 03 Sep 2006 01:19:28 +0000
Responsible-Changed-Why:
Back to role account, mycroft doesn't have commit access any longer.
State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 10 Apr 2008 01:43:40 +0000
State-Changed-Why:
feedback received, in 2004.
State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 10 Apr 2008 01:44:38 +0000
State-Changed-Why:
...however, things have changed since 2004, and like 14734 this should be
fixed. Is there still trouble?
State-Changed-From-To: feedback->open
State-Changed-By: spz@NetBSD.org
State-Changed-When: Thu, 22 May 2008 07:12:11 +0000
State-Changed-Why:
I have an USB keyboard; I just tested. USB keyboard won't break me into ddb,
the other one will.
State-Changed-From-To: open->feedback
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sat, 30 Jul 2011 20:07:21 +0000
State-Changed-Why:
I made two changes that fixed this for me:
- added options PCKBD_CNATTACH_MAY_FAIL to amd64 GENERIC, so the USB
keyboard can be the console
- fix to ohci HCD driver & a slight change with usbdi
From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/18818 CVS commit: src/sys/dev/usb
Date: Sat, 30 Jul 2011 20:05:37 +0000
Module Name: src
Committed By: jmcneill
Date: Sat Jul 30 20:05:36 UTC 2011
Modified Files:
src/sys/dev/usb: ohci.c usbdi.c
Log Message:
PR# port-i386/18818: cannot enter ddb with usb keyboard
- ohci: when polling, make sure sc_eintrs has the OHCI_WDH flag set
otherwise ohci_intr1 won't actually read data
- usbdi: kick the host controller by calling its soft_intr callback when
switching out of polling mode too
DDB with a USB keyboard works for me now with ohci.
To generate a diff of this commit:
cvs rdiff -u -r1.216 -r1.217 src/sys/dev/usb/ohci.c
cvs rdiff -u -r1.132 -r1.133 src/sys/dev/usb/usbdi.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: feedback->open
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 13 Nov 2011 19:58:43 +0000
State-Changed-Why:
Update submitter's address...
State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 13 Nov 2011 19:59:00 +0000
State-Changed-Why:
...and try again with the feedback.
From: Jeff Rizzo <riz@tastylime.net>
To: gnats-bugs@netbsd.org
Cc:
Subject: Re: kern/18818
Date: Sun, 01 Jan 2012 10:20:52 -0800
I have a macppc box whose keyboard (ohci) did not work in DDB before
this change; now, it works fine.
I'd say this can be closed.
State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 02 Jan 2012 17:00:10 +0000
State-Changed-Why:
Excellent.
(Of course, there may be an infinite supply of other similar problems, as
we've seen before - if anyone is still having trouble please write in.)
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.