PR# port-i386/18818: cannot enter ddb with usb keyboard

- ohci: when polling, make sure sc_eintrs has the OHCI_WDH flag set
  otherwise ohci_intr1 won't actually read data
- usbdi: kick the host controller by calling its soft_intr callback when
  switching out of polling mode too

DDB with a USB keyboard works for me now with ohci.